feat(spin): add compatibility jdk 9 and onwards
* include shaded jaxb of java 7 to dataformat-all
* add jdk 9 and onwards profile to dataformat-xml-dom
* promote jruby to 9.1.17.0

related to CAM-9290