@@ -94,11 +94,30 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
-            <version>2.17</version>
             <configuration>
               <argLine>-XX:PermSize=128m -XX:MaxPermSize=256m</argLine>
               <excludes>
                 <exclude>**/javascript/**</exclude>
+              </excludes>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>jdk-9-and-onwards</id>
+      <activation>
+        <jdk>[9,)</jdk>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <argLine>-XX:PermSize=128m -XX:MaxPermSize=256m</argLine>
+              <excludes>
+                <exclude>**/DataFormatProviderTest.java</exclude>
               </excludes>
             </configuration>
           </plugin>
